Update make -f Makefile.libretro generate

--- a/crawl-ref/source/rltiles/tile-player.html
+++ b/crawl-ref/source/rltiles/tile-player.html
@@ -381,6 +381,10 @@
 <tr><td><img src="mon/nonliving/fulminant_prism2.png"/></td><td>(25.0%)</td><td></td><td>mon/nonliving/fulminant_prism2.png</td></tr>
 <tr><td><img src="mon/nonliving/fulminant_prism3.png"/></td><td>(25.0%)</td><td></td><td>mon/nonliving/fulminant_prism3.png</td></tr>
 <tr><td><img src="mon/nonliving/fulminant_prism4.png"/></td><td>(25.0%)</td><td></td><td>mon/nonliving/fulminant_prism4.png</td></tr>
+<tr><td><img src="mon/nonliving/singularity1.png"/></td><td>mons_singularity (25.0%)</td><td>TILEP_MONS_SINGULARITY</td><td>mon/nonliving/singularity1.png</td></tr>
+<tr><td><img src="mon/nonliving/singularity2.png"/></td><td>(25.0%)</td><td></td><td>mon/nonliving/singularity2.png</td></tr>
+<tr><td><img src="mon/nonliving/singularity3.png"/></td><td>(25.0%)</td><td></td><td>mon/nonliving/singularity3.png</td></tr>
+<tr><td><img src="mon/nonliving/singularity4.png"/></td><td>(25.0%)</td><td></td><td>mon/nonliving/singularity4.png</td></tr>
 <tr><td><img src="mon/nonliving/ball_lightning.png"/></td><td>mons_ball_lightning</td><td>TILEP_MONS_BALL_LIGHTNING</td><td>mon/nonliving/ball_lightning.png</td></tr>
 <tr><td><img src="mon/undead/death_cob.png"/></td><td>mons_death_cob</td><td>TILEP_MONS_DEATH_COB</td><td>mon/undead/death_cob.png</td></tr>
 <tr><td><img src="mon/abyss/ancient_zyme.png"/></td><td>mons_ancient_zyme</td><td>TILEP_MONS_ANCIENT_ZYME</td><td>mon/abyss/ancient_zyme.png</td></tr>
