--- a/crawl-ref/source/rltiles/tile-gui.html
+++ b/crawl-ref/source/rltiles/tile-gui.html
@@ -102,6 +102,7 @@
 <tr><td><img src="gui/spells/necromancy/symbol_of_torment.png"/></td><td>symbol_of_torment</td><td>TILEG_SYMBOL_OF_TORMENT</td><td>gui/spells/necromancy/symbol_of_torment.png</td></tr>
 <tr><td><img src="gui/spells/necromancy/twisted_resurrection.png"/></td><td>twisted_resurrection</td><td>TILEG_TWISTED_RESURRECTION</td><td>gui/spells/necromancy/twisted_resurrection.png</td></tr>
 <tr><td><img src="gui/spells/necromancy/vampiric_draining.png"/></td><td>vampiric_draining</td><td>TILEG_VAMPIRIC_DRAINING</td><td>gui/spells/necromancy/vampiric_draining.png</td></tr>
+<tr><td><img src="gui/spells/necromancy/cigotuvis_embrace.png"/></td><td>cigotuvis_embrace</td><td>TILEG_CIGOTUVIS_EMBRACE</td><td>gui/spells/necromancy/cigotuvis_embrace.png</td></tr>
 <tr><td><img src="gui/spells/poison/alistairs_intoxication.png"/></td><td>alistairs_intoxication</td><td>TILEG_ALISTAIRS_INTOXICATION</td><td>gui/spells/poison/alistairs_intoxication.png</td></tr>
 <tr><td><img src="gui/spells/poison/cure_poison.png"/></td><td>cure_poison</td><td>TILEG_CURE_POISON</td><td>gui/spells/poison/cure_poison.png</td></tr>
 <tr><td><img src="gui/spells/poison/mephitic_cloud.png"/></td><td>mephitic_cloud</td><td>TILEG_MEPHITIC_CLOUD</td><td>gui/spells/poison/mephitic_cloud.png</td></tr>
