--- a/crawl-ref/source/rltiles/tile-main.html
+++ b/crawl-ref/source/rltiles/tile-main.html
@@ -732,7 +732,7 @@
 <tr><td><img src="item/potion/i-label.png"/></td><td>pot_poison</td><td>TILE_POT_POISON</td><td>item/potion/i-label.png</td></tr>
 <tr><td><img src="item/potion/i-label.png"/></td><td>pot_slowing</td><td>TILE_POT_SLOWING</td><td>item/potion/i-label.png</td></tr>
 <tr><td><img src="item/potion/i-label.png"/></td><td>pot_cancellation</td><td>TILE_POT_CANCELLATION</td><td>item/potion/i-label.png</td></tr>
-<tr><td><img src="item/potion/i-label.png"/></td><td>pot_confusion</td><td>TILE_POT_CONFUSION</td><td>item/potion/i-label.png</td></tr>
+<tr><td><img src="item/potion/i-label.png"/></td><td>pot_ambrosia</td><td>TILE_POT_AMBROSIA</td><td>item/potion/i-label.png</td></tr>
 <tr><td><img src="item/potion/i-label.png"/></td><td>pot_invisibility</td><td>TILE_POT_INVISIBILITY</td><td>item/potion/i-label.png</td></tr>
 <tr><td><img src="item/potion/i-label.png"/></td><td>pot_porridge</td><td>TILE_POT_PORRIDGE</td><td>item/potion/i-label.png</td></tr>
 <tr><td><img src="item/potion/i-label.png"/></td><td>pot_degeneration</td><td>TILE_POT_DEGENERATION</td><td>item/potion/i-label.png</td></tr>
