--- a/crawl-ref/source/rltiles/tile-icons.html
+++ b/crawl-ref/source/rltiles/tile-icons.html
@@ -95,4 +95,7 @@
 <tr><td><img src="misc/travel_path_to6.png"/></td><td>(12.5%)</td><td></td><td>misc/travel_path_to6.png</td></tr>
 <tr><td><img src="misc/travel_path_to7.png"/></td><td>(12.5%)</td><td></td><td>misc/travel_path_to7.png</td></tr>
 <tr><td><img src="misc/travel_path_to8.png"/></td><td>(12.5%)</td><td></td><td>misc/travel_path_to8.png</td></tr>
+<tr><td><img src="misc/gold_sparkles1.png"/></td><td>gold_sparkles (33.3%)</td><td>TILEI_GOLD_SPARKLES</td><td>misc/gold_sparkles1.png</td></tr>
+<tr><td><img src="misc/gold_sparkles2.png"/></td><td>(33.3%)</td><td></td><td>misc/gold_sparkles2.png</td></tr>
+<tr><td><img src="misc/gold_sparkles3.png"/></td><td>(33.3%)</td><td></td><td>misc/gold_sparkles3.png</td></tr>
 </table></html>
