BUild fix, etc.

--- a/crawl-ref/source/rltiles/tile-gui.html
+++ b/crawl-ref/source/rltiles/tile-gui.html
@@ -148,6 +148,7 @@
 <tr><td><img src="gui/spells/translocation/warp_weapon.png"/></td><td>warp_weapon</td><td>TILEG_WARP_WEAPON</td><td>gui/spells/translocation/warp_weapon.png</td></tr>
 <tr><td><img src="gui/spells/translocation/shroud_of_golubria.png"/></td><td>shroud_of_golubria</td><td>TILEG_SHROUD_OF_GOLUBRIA</td><td>gui/spells/translocation/shroud_of_golubria.png</td></tr>
 <tr><td><img src="gui/spells/translocation/singularity.png"/></td><td>singularity</td><td>TILEG_SINGULARITY</td><td>gui/spells/translocation/singularity.png</td></tr>
+<tr><td><img src="gui/spells/translocation/gravitas.png"/></td><td>gravitas</td><td>TILEG_GRAVITAS</td><td>gui/spells/translocation/gravitas.png</td></tr>
 <tr><td><img src="gui/spells/transmutation/blade_hands.png"/></td><td>blade_hands</td><td>TILEG_BLADE_HANDS</td><td>gui/spells/transmutation/blade_hands.png</td></tr>
 <tr><td><img src="gui/spells/transmutation/beastly_appendage.png"/></td><td>beastly_appendage</td><td>TILEG_BEASTLY_APPENDAGE</td><td>gui/spells/transmutation/beastly_appendage.png</td></tr>
 <tr><td><img src="gui/spells/transmutation/irradiate.png"/></td><td>irradiate</td><td>TILEG_IRRADIATE</td><td>gui/spells/transmutation/irradiate.png</td></tr>
