--- a/crawl-ref/source/rltiles/tile-feat.html
+++ b/crawl-ref/source/rltiles/tile-feat.html
@@ -85,7 +85,7 @@
 <tr><td><img src="dngn/statues/statue_archer.png"/></td><td>(5.0%)</td><td></td><td>dngn/statues/statue_archer.png</td></tr>
 <tr><td><img src="dngn/statues/statue_tengu.png"/></td><td>(5.0%)</td><td></td><td>dngn/statues/statue_tengu.png</td></tr>
 <tr><td><img src="dngn/statues/statue_centaur.png"/></td><td>dngn_statue_centaur</td><td>TILE_DNGN_STATUE_CENTAUR</td><td>dngn/statues/statue_centaur.png</td></tr>
-<tr><td><img src="dngn/statues/statue_snail.png"/></td><td>(5.0%)</td><td></td><td>dngn/statues/statue_snail.png</td></tr>
+<tr><td><img src="dngn/statues/statue_snail.png"/></td><td>dngn_statue_snail</td><td>TILE_DNGN_STATUE_SNAIL</td><td>dngn/statues/statue_snail.png</td></tr>
 <tr><td><img src="dngn/statues/statue_cat.png"/></td><td>dngn_statue_cat</td><td>TILE_DNGN_STATUE_CAT</td><td>dngn/statues/statue_cat.png</td></tr>
 <tr><td><img src="dngn/statues/statue_princess.png"/></td><td>(5.0%)</td><td></td><td>dngn/statues/statue_princess.png</td></tr>
 <tr><td><img src="dngn/statues/statue_mermaid.png"/></td><td>dngn_statue_mermaid</td><td>TILE_DNGN_STATUE_MERMAID</td><td>dngn/statues/statue_mermaid.png</td></tr>
