--- a/crawl-ref/source/rltiles/tile-player.html
+++ b/crawl-ref/source/rltiles/tile-player.html
@@ -2182,6 +2182,7 @@
 <tr><td><img src="player/hand1/artefact/spriggans_knife.png"/></td><td>spriggans_knife</td><td>TILEP_HAND1_SPRIGGANS_KNIFE</td><td>player/hand1/artefact/spriggans_knife.png</td></tr>
 <tr><td><img src="player/hand1/artefact/capt_cutlass.png"/></td><td>capt_cutlass</td><td>TILEP_HAND1_CAPT_CUTLASS</td><td>player/hand1/artefact/capt_cutlass.png</td></tr>
 <tr><td><img src="player/hand1/artefact/arc_blade.png"/></td><td>arc_blade</td><td>TILEP_HAND1_ARC_BLADE</td><td>player/hand1/artefact/arc_blade.png</td></tr>
+<tr><td><img src="player/hand1/artefact/gyre.png"/></td><td>gyre</td><td>TILEP_HAND1_GYRE</td><td>player/hand1/artefact/gyre.png</td></tr>
 <tr><td><img src="player/hand1/artefact/wucad_mu.png"/></td><td>wucad_mu</td><td>TILEP_HAND1_WUCAD_MU</td><td>player/hand1/artefact/wucad_mu.png</td></tr>
 <tr><td><img src="player/hand1/artefact/mace_of_variability.png"/></td><td>mace_of_variability</td><td>TILEP_HAND1_MACE_OF_VARIABILITY</td><td>player/hand1/artefact/mace_of_variability.png</td></tr>
 <tr><td><img src="player/hand1/artefact/mace_of_brilliance.png"/></td><td>mace_of_brilliance</td><td>TILEP_HAND1_MACE_OF_BRILLIANCE</td><td>player/hand1/artefact/mace_of_brilliance.png</td></tr>
