--- a/crawl-ref/source/rltiles/tile-feat.html
+++ b/crawl-ref/source/rltiles/tile-feat.html
@@ -35,50 +35,50 @@
 <tr><td><img src="dngn/trees/mangrove1.png"/></td><td>dngn_mangrove (43.5%)</td><td>TILE_DNGN_MANGROVE</td><td>dngn/trees/mangrove1.png</td></tr>
 <tr><td><img src="dngn/trees/mangrove2.png"/></td><td>(34.8%)</td><td></td><td>dngn/trees/mangrove2.png</td></tr>
 <tr><td><img src="dngn/trees/mangrove3.png"/></td><td>(21.7%)</td><td></td><td>dngn/trees/mangrove3.png</td></tr>
-<tr><td><img src="dngn/closed_door.png"/></td><td>dngn_closed_door</td><td>TILE_DNGN_CLOSED_DOOR</td><td>dngn/closed_door.png</td></tr>
-<tr><td><img src="dngn/gate_closed_left.png"/></td><td>dngn_gate_closed_left</td><td>TILE_DNGN_GATE_CLOSED_LEFT</td><td>dngn/gate_closed_left.png</td></tr>
-<tr><td><img src="dngn/gate_closed_middle.png"/></td><td>dngn_gate_closed_middle</td><td>TILE_DNGN_GATE_CLOSED_MIDDLE</td><td>dngn/gate_closed_middle.png</td></tr>
-<tr><td><img src="dngn/gate_closed_right.png"/></td><td>dngn_gate_closed_right</td><td>TILE_DNGN_GATE_CLOSED_RIGHT</td><td>dngn/gate_closed_right.png</td></tr>
-<tr><td><img src="dngn/vgate_closed_up.png"/></td><td>dngn_vgate_closed_up</td><td>TILE_DNGN_VGATE_CLOSED_UP</td><td>dngn/vgate_closed_up.png</td></tr>
-<tr><td><img src="dngn/vgate_closed_middle.png"/></td><td>dngn_vgate_closed_middle</td><td>TILE_DNGN_VGATE_CLOSED_MIDDLE</td><td>dngn/vgate_closed_middle.png</td></tr>
-<tr><td><img src="dngn/vgate_closed_down.png"/></td><td>dngn_vgate_closed_down</td><td>TILE_DNGN_VGATE_CLOSED_DOWN</td><td>dngn/vgate_closed_down.png</td></tr>
-<tr><td><img src="dngn/open_door.png"/></td><td>dngn_open_door</td><td>TILE_DNGN_OPEN_DOOR</td><td>dngn/open_door.png</td></tr>
-<tr><td><img src="dngn/gate_open_left.png"/></td><td>dngn_gate_open_left</td><td>TILE_DNGN_GATE_OPEN_LEFT</td><td>dngn/gate_open_left.png</td></tr>
-<tr><td><img src="dngn/gate_open_middle.png"/></td><td>dngn_gate_open_middle</td><td>TILE_DNGN_GATE_OPEN_MIDDLE</td><td>dngn/gate_open_middle.png</td></tr>
-<tr><td><img src="dngn/gate_open_right.png"/></td><td>dngn_gate_open_right</td><td>TILE_DNGN_GATE_OPEN_RIGHT</td><td>dngn/gate_open_right.png</td></tr>
-<tr><td><img src="dngn/vgate_open_up.png"/></td><td>dngn_vgate_open_up</td><td>TILE_DNGN_VGATE_OPEN_UP</td><td>dngn/vgate_open_up.png</td></tr>
-<tr><td><img src="dngn/vgate_open_middle.png"/></td><td>dngn_vgate_open_middle</td><td>TILE_DNGN_VGATE_OPEN_MIDDLE</td><td>dngn/vgate_open_middle.png</td></tr>
-<tr><td><img src="dngn/vgate_open_down.png"/></td><td>dngn_vgate_open_down</td><td>TILE_DNGN_VGATE_OPEN_DOWN</td><td>dngn/vgate_open_down.png</td></tr>
-<tr><td><img src="dngn/runed_door.png"/></td><td>dngn_runed_door</td><td>TILE_DNGN_RUNED_DOOR</td><td>dngn/runed_door.png</td></tr>
-<tr><td><img src="dngn/gate_runed_left.png"/></td><td>dngn_gate_runed_left</td><td>TILE_DNGN_GATE_RUNED_LEFT</td><td>dngn/gate_runed_left.png</td></tr>
-<tr><td><img src="dngn/gate_runed_middle.png"/></td><td>dngn_gate_runed_middle</td><td>TILE_DNGN_GATE_RUNED_MIDDLE</td><td>dngn/gate_runed_middle.png</td></tr>
-<tr><td><img src="dngn/gate_runed_right.png"/></td><td>dngn_gate_runed_right</td><td>TILE_DNGN_GATE_RUNED_RIGHT</td><td>dngn/gate_runed_right.png</td></tr>
-<tr><td><img src="dngn/vgate_runed_up.png"/></td><td>dngn_vgate_runed_up</td><td>TILE_DNGN_VGATE_RUNED_UP</td><td>dngn/vgate_runed_up.png</td></tr>
-<tr><td><img src="dngn/vgate_runed_middle.png"/></td><td>dngn_vgate_runed_middle</td><td>TILE_DNGN_VGATE_RUNED_MIDDLE</td><td>dngn/vgate_runed_middle.png</td></tr>
-<tr><td><img src="dngn/vgate_runed_down.png"/></td><td>dngn_vgate_runed_down</td><td>TILE_DNGN_VGATE_RUNED_DOWN</td><td>dngn/vgate_runed_down.png</td></tr>
-<tr><td><img src="dngn/sealed_door.png"/></td><td>dngn_sealed_door</td><td>TILE_DNGN_SEALED_DOOR</td><td>dngn/sealed_door.png</td></tr>
-<tr><td><img src="dngn/gate_sealed_left.png"/></td><td>dngn_gate_sealed_left</td><td>TILE_DNGN_GATE_SEALED_LEFT</td><td>dngn/gate_sealed_left.png</td></tr>
-<tr><td><img src="dngn/gate_sealed_middle.png"/></td><td>dngn_gate_sealed_middle</td><td>TILE_DNGN_GATE_SEALED_MIDDLE</td><td>dngn/gate_sealed_middle.png</td></tr>
-<tr><td><img src="dngn/gate_sealed_right.png"/></td><td>dngn_gate_sealed_right</td><td>TILE_DNGN_GATE_SEALED_RIGHT</td><td>dngn/gate_sealed_right.png</td></tr>
-<tr><td><img src="dngn/vgate_sealed_up.png"/></td><td>dngn_vgate_sealed_up</td><td>TILE_DNGN_VGATE_SEALED_UP</td><td>dngn/vgate_sealed_up.png</td></tr>
-<tr><td><img src="dngn/vgate_sealed_middle.png"/></td><td>dngn_vgate_sealed_middle</td><td>TILE_DNGN_VGATE_SEALED_MIDDLE</td><td>dngn/vgate_sealed_middle.png</td></tr>
-<tr><td><img src="dngn/vgate_sealed_down.png"/></td><td>dngn_vgate_sealed_down</td><td>TILE_DNGN_VGATE_SEALED_DOWN</td><td>dngn/vgate_sealed_down.png</td></tr>
-<tr><td><img src="dngn/closed_door_crypt.png"/></td><td>dngn_closed_door_crypt</td><td>TILE_DNGN_CLOSED_DOOR_CRYPT</td><td>dngn/closed_door_crypt.png</td></tr>
-<tr><td><img src="dngn/gate_closed_left_crypt.png"/></td><td>dngn_gate_closed_left_crypt</td><td>TILE_DNGN_GATE_CLOSED_LEFT_CRYPT</td><td>dngn/gate_closed_left_crypt.png</td></tr>
-<tr><td><img src="dngn/gate_closed_middle_crypt.png"/></td><td>dngn_gate_closed_middle_crypt</td><td>TILE_DNGN_GATE_CLOSED_MIDDLE_CRYPT</td><td>dngn/gate_closed_middle_crypt.png</td></tr>
-<tr><td><img src="dngn/gate_closed_right_crypt.png"/></td><td>dngn_gate_closed_right_crypt</td><td>TILE_DNGN_GATE_CLOSED_RIGHT_CRYPT</td><td>dngn/gate_closed_right_crypt.png</td></tr>
-<tr><td><img src="dngn/vgate_closed_up_crypt.png"/></td><td>dngn_vgate_closed_up_crypt</td><td>TILE_DNGN_VGATE_CLOSED_UP_CRYPT</td><td>dngn/vgate_closed_up_crypt.png</td></tr>
-<tr><td><img src="dngn/vgate_closed_middle_crypt.png"/></td><td>dngn_vgate_closed_middle_crypt</td><td>TILE_DNGN_VGATE_CLOSED_MIDDLE_CRYPT</td><td>dngn/vgate_closed_middle_crypt.png</td></tr>
-<tr><td><img src="dngn/vgate_closed_down_crypt.png"/></td><td>dngn_vgate_closed_down_crypt</td><td>TILE_DNGN_VGATE_CLOSED_DOWN_CRYPT</td><td>dngn/vgate_closed_down_crypt.png</td></tr>
-<tr><td><img src="dngn/open_door_crypt.png"/></td><td>dngn_open_door_crypt</td><td>TILE_DNGN_OPEN_DOOR_CRYPT</td><td>dngn/open_door_crypt.png</td></tr>
-<tr><td><img src="dngn/gate_open_left_crypt.png"/></td><td>dngn_gate_open_left_crypt</td><td>TILE_DNGN_GATE_OPEN_LEFT_CRYPT</td><td>dngn/gate_open_left_crypt.png</td></tr>
-<tr><td><img src="dngn/gate_open_middle_crypt.png"/></td><td>dngn_gate_open_middle_crypt</td><td>TILE_DNGN_GATE_OPEN_MIDDLE_CRYPT</td><td>dngn/gate_open_middle_crypt.png</td></tr>
-<tr><td><img src="dngn/gate_open_right_crypt.png"/></td><td>dngn_gate_open_right_crypt</td><td>TILE_DNGN_GATE_OPEN_RIGHT_CRYPT</td><td>dngn/gate_open_right_crypt.png</td></tr>
-<tr><td><img src="dngn/vgate_open_up_crypt.png"/></td><td>dngn_vgate_open_up_crypt</td><td>TILE_DNGN_VGATE_OPEN_UP_CRYPT</td><td>dngn/vgate_open_up_crypt.png</td></tr>
-<tr><td><img src="dngn/vgate_open_middle_crypt.png"/></td><td>dngn_vgate_open_middle_crypt</td><td>TILE_DNGN_VGATE_OPEN_MIDDLE_CRYPT</td><td>dngn/vgate_open_middle_crypt.png</td></tr>
-<tr><td><img src="dngn/vgate_open_down_crypt.png"/></td><td>dngn_vgate_open_down_crypt</td><td>TILE_DNGN_VGATE_OPEN_DOWN_CRYPT</td><td>dngn/vgate_open_down_crypt.png</td></tr>
-<tr><td><img src="dngn/gateways/fleshy_orifice_closed.png"/></td><td>dngn_fleshy_orifice (50.0%)</td><td>TILE_DNGN_FLESHY_ORIFICE</td><td>dngn/gateways/fleshy_orifice_closed.png</td></tr>
-<tr><td><img src="dngn/gateways/fleshy_orifice_open.png"/></td><td>(50.0%)</td><td></td><td>dngn/gateways/fleshy_orifice_open.png</td></tr>
+<tr><td><img src="dngn/doors/closed_door.png"/></td><td>dngn_closed_door</td><td>TILE_DNGN_CLOSED_DOOR</td><td>dngn/doors/closed_door.png</td></tr>
+<tr><td><img src="dngn/doors/gate_closed_left.png"/></td><td>dngn_gate_closed_left</td><td>TILE_DNGN_GATE_CLOSED_LEFT</td><td>dngn/doors/gate_closed_left.png</td></tr>
+<tr><td><img src="dngn/doors/gate_closed_middle.png"/></td><td>dngn_gate_closed_middle</td><td>TILE_DNGN_GATE_CLOSED_MIDDLE</td><td>dngn/doors/gate_closed_middle.png</td></tr>
+<tr><td><img src="dngn/doors/gate_closed_right.png"/></td><td>dngn_gate_closed_right</td><td>TILE_DNGN_GATE_CLOSED_RIGHT</td><td>dngn/doors/gate_closed_right.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_closed_up.png"/></td><td>dngn_vgate_closed_up</td><td>TILE_DNGN_VGATE_CLOSED_UP</td><td>dngn/doors/vgate_closed_up.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_closed_middle.png"/></td><td>dngn_vgate_closed_middle</td><td>TILE_DNGN_VGATE_CLOSED_MIDDLE</td><td>dngn/doors/vgate_closed_middle.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_closed_down.png"/></td><td>dngn_vgate_closed_down</td><td>TILE_DNGN_VGATE_CLOSED_DOWN</td><td>dngn/doors/vgate_closed_down.png</td></tr>
+<tr><td><img src="dngn/doors/open_door.png"/></td><td>dngn_open_door</td><td>TILE_DNGN_OPEN_DOOR</td><td>dngn/doors/open_door.png</td></tr>
+<tr><td><img src="dngn/doors/gate_open_left.png"/></td><td>dngn_gate_open_left</td><td>TILE_DNGN_GATE_OPEN_LEFT</td><td>dngn/doors/gate_open_left.png</td></tr>
+<tr><td><img src="dngn/doors/gate_open_middle.png"/></td><td>dngn_gate_open_middle</td><td>TILE_DNGN_GATE_OPEN_MIDDLE</td><td>dngn/doors/gate_open_middle.png</td></tr>
+<tr><td><img src="dngn/doors/gate_open_right.png"/></td><td>dngn_gate_open_right</td><td>TILE_DNGN_GATE_OPEN_RIGHT</td><td>dngn/doors/gate_open_right.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_open_up.png"/></td><td>dngn_vgate_open_up</td><td>TILE_DNGN_VGATE_OPEN_UP</td><td>dngn/doors/vgate_open_up.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_open_middle.png"/></td><td>dngn_vgate_open_middle</td><td>TILE_DNGN_VGATE_OPEN_MIDDLE</td><td>dngn/doors/vgate_open_middle.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_open_down.png"/></td><td>dngn_vgate_open_down</td><td>TILE_DNGN_VGATE_OPEN_DOWN</td><td>dngn/doors/vgate_open_down.png</td></tr>
+<tr><td><img src="dngn/doors/runed_door.png"/></td><td>dngn_runed_door</td><td>TILE_DNGN_RUNED_DOOR</td><td>dngn/doors/runed_door.png</td></tr>
+<tr><td><img src="dngn/doors/gate_runed_left.png"/></td><td>dngn_gate_runed_left</td><td>TILE_DNGN_GATE_RUNED_LEFT</td><td>dngn/doors/gate_runed_left.png</td></tr>
+<tr><td><img src="dngn/doors/gate_runed_middle.png"/></td><td>dngn_gate_runed_middle</td><td>TILE_DNGN_GATE_RUNED_MIDDLE</td><td>dngn/doors/gate_runed_middle.png</td></tr>
+<tr><td><img src="dngn/doors/gate_runed_right.png"/></td><td>dngn_gate_runed_right</td><td>TILE_DNGN_GATE_RUNED_RIGHT</td><td>dngn/doors/gate_runed_right.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_runed_up.png"/></td><td>dngn_vgate_runed_up</td><td>TILE_DNGN_VGATE_RUNED_UP</td><td>dngn/doors/vgate_runed_up.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_runed_middle.png"/></td><td>dngn_vgate_runed_middle</td><td>TILE_DNGN_VGATE_RUNED_MIDDLE</td><td>dngn/doors/vgate_runed_middle.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_runed_down.png"/></td><td>dngn_vgate_runed_down</td><td>TILE_DNGN_VGATE_RUNED_DOWN</td><td>dngn/doors/vgate_runed_down.png</td></tr>
+<tr><td><img src="dngn/doors/sealed_door.png"/></td><td>dngn_sealed_door</td><td>TILE_DNGN_SEALED_DOOR</td><td>dngn/doors/sealed_door.png</td></tr>
+<tr><td><img src="dngn/doors/gate_sealed_left.png"/></td><td>dngn_gate_sealed_left</td><td>TILE_DNGN_GATE_SEALED_LEFT</td><td>dngn/doors/gate_sealed_left.png</td></tr>
+<tr><td><img src="dngn/doors/gate_sealed_middle.png"/></td><td>dngn_gate_sealed_middle</td><td>TILE_DNGN_GATE_SEALED_MIDDLE</td><td>dngn/doors/gate_sealed_middle.png</td></tr>
+<tr><td><img src="dngn/doors/gate_sealed_right.png"/></td><td>dngn_gate_sealed_right</td><td>TILE_DNGN_GATE_SEALED_RIGHT</td><td>dngn/doors/gate_sealed_right.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_sealed_up.png"/></td><td>dngn_vgate_sealed_up</td><td>TILE_DNGN_VGATE_SEALED_UP</td><td>dngn/doors/vgate_sealed_up.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_sealed_middle.png"/></td><td>dngn_vgate_sealed_middle</td><td>TILE_DNGN_VGATE_SEALED_MIDDLE</td><td>dngn/doors/vgate_sealed_middle.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_sealed_down.png"/></td><td>dngn_vgate_sealed_down</td><td>TILE_DNGN_VGATE_SEALED_DOWN</td><td>dngn/doors/vgate_sealed_down.png</td></tr>
+<tr><td><img src="dngn/doors/closed_door_crypt.png"/></td><td>dngn_closed_door_crypt</td><td>TILE_DNGN_CLOSED_DOOR_CRYPT</td><td>dngn/doors/closed_door_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/gate_closed_left_crypt.png"/></td><td>dngn_gate_closed_left_crypt</td><td>TILE_DNGN_GATE_CLOSED_LEFT_CRYPT</td><td>dngn/doors/gate_closed_left_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/gate_closed_middle_crypt.png"/></td><td>dngn_gate_closed_middle_crypt</td><td>TILE_DNGN_GATE_CLOSED_MIDDLE_CRYPT</td><td>dngn/doors/gate_closed_middle_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/gate_closed_right_crypt.png"/></td><td>dngn_gate_closed_right_crypt</td><td>TILE_DNGN_GATE_CLOSED_RIGHT_CRYPT</td><td>dngn/doors/gate_closed_right_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_closed_up_crypt.png"/></td><td>dngn_vgate_closed_up_crypt</td><td>TILE_DNGN_VGATE_CLOSED_UP_CRYPT</td><td>dngn/doors/vgate_closed_up_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_closed_middle_crypt.png"/></td><td>dngn_vgate_closed_middle_crypt</td><td>TILE_DNGN_VGATE_CLOSED_MIDDLE_CRYPT</td><td>dngn/doors/vgate_closed_middle_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_closed_down_crypt.png"/></td><td>dngn_vgate_closed_down_crypt</td><td>TILE_DNGN_VGATE_CLOSED_DOWN_CRYPT</td><td>dngn/doors/vgate_closed_down_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/open_door_crypt.png"/></td><td>dngn_open_door_crypt</td><td>TILE_DNGN_OPEN_DOOR_CRYPT</td><td>dngn/doors/open_door_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/gate_open_left_crypt.png"/></td><td>dngn_gate_open_left_crypt</td><td>TILE_DNGN_GATE_OPEN_LEFT_CRYPT</td><td>dngn/doors/gate_open_left_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/gate_open_middle_crypt.png"/></td><td>dngn_gate_open_middle_crypt</td><td>TILE_DNGN_GATE_OPEN_MIDDLE_CRYPT</td><td>dngn/doors/gate_open_middle_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/gate_open_right_crypt.png"/></td><td>dngn_gate_open_right_crypt</td><td>TILE_DNGN_GATE_OPEN_RIGHT_CRYPT</td><td>dngn/doors/gate_open_right_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_open_up_crypt.png"/></td><td>dngn_vgate_open_up_crypt</td><td>TILE_DNGN_VGATE_OPEN_UP_CRYPT</td><td>dngn/doors/vgate_open_up_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_open_middle_crypt.png"/></td><td>dngn_vgate_open_middle_crypt</td><td>TILE_DNGN_VGATE_OPEN_MIDDLE_CRYPT</td><td>dngn/doors/vgate_open_middle_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/vgate_open_down_crypt.png"/></td><td>dngn_vgate_open_down_crypt</td><td>TILE_DNGN_VGATE_OPEN_DOWN_CRYPT</td><td>dngn/doors/vgate_open_down_crypt.png</td></tr>
+<tr><td><img src="dngn/doors/fleshy_orifice_closed.png"/></td><td>dngn_fleshy_orifice (50.0%)</td><td>TILE_DNGN_FLESHY_ORIFICE</td><td>dngn/doors/fleshy_orifice_closed.png</td></tr>
+<tr><td><img src="dngn/doors/fleshy_orifice_open.png"/></td><td>(50.0%)</td><td></td><td>dngn/doors/fleshy_orifice_open.png</td></tr>
 <tr><td><img src="dngn/gateways/stone_arch.png"/></td><td>dngn_stone_arch</td><td>TILE_DNGN_STONE_ARCH</td><td>dngn/gateways/stone_arch.png</td></tr>
 <tr><td><img src="dngn/statues/orcish_idol.png"/></td><td>dngn_orcish_idol</td><td>TILE_DNGN_ORCISH_IDOL</td><td>dngn/statues/orcish_idol.png</td></tr>
 <tr><td><img src="dngn/statues/statue_dwarf.png"/></td><td>dngn_granite_statue (5.0%)</td><td>TILE_DNGN_GRANITE_STATUE</td><td>dngn/statues/statue_dwarf.png</td></tr>
@@ -143,6 +143,8 @@
 <tr><td><img src="dngn/traps/shaft.png"/></td><td>dngn_trap_shaft</td><td>TILE_DNGN_TRAP_SHAFT</td><td>dngn/traps/shaft.png</td></tr>
 <tr><td><img src="dngn/traps/teleport.png"/></td><td>dngn_trap_teleport</td><td>TILE_DNGN_TRAP_TELEPORT</td><td>dngn/traps/teleport.png</td></tr>
 <tr><td><img src="dngn/traps/teleport_permanent.png"/></td><td>dngn_trap_teleport_permanent</td><td>TILE_DNGN_TRAP_TELEPORT_PERMANENT</td><td>dngn/traps/teleport_permanent.png</td></tr>
+<tr><td><img src="dngn/traps/shadow.png"/></td><td>dngn_trap_shadow</td><td>TILE_DNGN_TRAP_SHADOW</td><td>dngn/traps/shadow.png</td></tr>
+<tr><td><img src="dngn/traps/shadow_dormant.png"/></td><td>dngn_trap_shadow_dormant</td><td>TILE_DNGN_TRAP_SHADOW_DORMANT</td><td>dngn/traps/shadow_dormant.png</td></tr>
 <tr><td><img src="dngn/traps/zot.png"/></td><td>dngn_trap_zot</td><td>TILE_DNGN_TRAP_ZOT</td><td>dngn/traps/zot.png</td></tr>
 <tr><td><img src="dngn/traps/passage_of_golubria.png"/></td><td>dngn_trap_golubria</td><td>TILE_DNGN_TRAP_GOLUBRIA</td><td>dngn/traps/passage_of_golubria.png</td></tr>
 <tr><td><img src="dngn/traps/pressure_plate.png"/></td><td>dngn_trap_plate</td><td>TILE_DNGN_TRAP_PLATE</td><td>dngn/traps/pressure_plate.png</td></tr>
