--- a/crawl-ref/source/rltiles/tile-gui.html
+++ b/crawl-ref/source/rltiles/tile-gui.html
@@ -133,7 +133,6 @@
 <tr><td><img src="gui/spells/summoning/summon_forest.png"/></td><td>summon_forest</td><td>TILEG_SUMMON_FOREST</td><td>gui/spells/summoning/summon_forest.png</td></tr>
 <tr><td><img src="gui/spells/summoning/monstrous_menagerie.png"/></td><td>monstrous_menagerie</td><td>TILEG_MONSTROUS_MENAGERIE</td><td>gui/spells/summoning/monstrous_menagerie.png</td></tr>
 <tr><td><img src="gui/spells/summoning/summon_mana_viper.png"/></td><td>summon_mana_viper</td><td>TILEG_SUMMON_MANA_VIPER</td><td>gui/spells/summoning/summon_mana_viper.png</td></tr>
-<tr><td><img src="gui/spells/summoning/forceful_dismissal.png"/></td><td>forceful_dismissal</td><td>TILEG_FORCEFUL_DISMISSAL</td><td>gui/spells/summoning/forceful_dismissal.png</td></tr>
 <tr><td><img src="gui/spells/summoning/spellforged_servitor.png"/></td><td>spellforged_servitor</td><td>TILEG_SPELLFORGED_SERVITOR</td><td>gui/spells/summoning/spellforged_servitor.png</td></tr>
 <tr><td><img src="gui/spells/translocation/apportation.png"/></td><td>apportation</td><td>TILEG_APPORTATION</td><td>gui/spells/translocation/apportation.png</td></tr>
 <tr><td><img src="gui/spells/translocation/blink.png"/></td><td>blink</td><td>TILEG_BLINK</td><td>gui/spells/translocation/blink.png</td></tr>
@@ -265,9 +264,9 @@
 <tr><td><img src="misc/error.png"/></td><td>word_of_recall</td><td>TILEG_WORD_OF_RECALL</td><td>misc/error.png</td></tr>
 <tr><td><img src="gui/abilities/hellfire.png"/></td><td>hellfire</td><td>TILEG_HELLFIRE</td><td>gui/abilities/hellfire.png</td></tr>
 <tr><td><img src="gui/invocations/beogh_smite.png"/></td><td>smiting</td><td>TILEG_SMITING</td><td>gui/invocations/beogh_smite.png</td></tr>
-<tr><td><img src="gui/invocations/elyvilon_lesser_healing.png"/></td><td>heal_other</td><td>TILEG_HEAL_OTHER</td><td>gui/invocations/elyvilon_lesser_healing.png</td></tr>
-<tr><td><img src="gui/invocations/elyvilon_lesser_self_healing.png"/></td><td>minor_healing</td><td>TILEG_MINOR_HEALING</td><td>gui/invocations/elyvilon_lesser_self_healing.png</td></tr>
-<tr><td><img src="gui/invocations/elyvilon_greater_self_healing.png"/></td><td>major_healing</td><td>TILEG_MAJOR_HEALING</td><td>gui/invocations/elyvilon_greater_self_healing.png</td></tr>
+<tr><td><img src="gui/invocations/elyvilon_heal_other.png"/></td><td>heal_other</td><td>TILEG_HEAL_OTHER</td><td>gui/invocations/elyvilon_heal_other.png</td></tr>
+<tr><td><img src="gui/invocations/elyvilon_lesser_healing.png"/></td><td>minor_healing</td><td>TILEG_MINOR_HEALING</td><td>gui/invocations/elyvilon_lesser_healing.png</td></tr>
+<tr><td><img src="gui/invocations/elyvilon_greater_healing.png"/></td><td>major_healing</td><td>TILEG_MAJOR_HEALING</td><td>gui/invocations/elyvilon_greater_healing.png</td></tr>
 <tr><td><img src="gui/invocations/makhleb_major_destruction.png"/></td><td>major_destruction</td><td>TILEG_MAJOR_DESTRUCTION</td><td>gui/invocations/makhleb_major_destruction.png</td></tr>
 <tr><td><img src="gui/invocations/lugonu_banish.png"/></td><td>banishment</td><td>TILEG_BANISHMENT</td><td>gui/invocations/lugonu_banish.png</td></tr>
 <tr><td><img src="gui/invocations/trog_hand.png"/></td><td>trogs_hand</td><td>TILEG_TROGS_HAND</td><td>gui/invocations/trog_hand.png</td></tr>
@@ -426,6 +425,7 @@
 <tr><td><img src="gui/commands/quicksave.png"/></td><td>cmd_save_game_now</td><td>TILEG_CMD_SAVE_GAME_NOW</td><td>gui/commands/quicksave.png</td></tr>
 <tr><td><img src="gui/commands/doll_editor.png"/></td><td>cmd_edit_player_tile</td><td>TILEG_CMD_EDIT_PLAYER_TILE</td><td>gui/commands/doll_editor.png</td></tr>
 <tr><td><img src="gui/commands/help.png"/></td><td>cmd_display_commands</td><td>TILEG_CMD_DISPLAY_COMMANDS</td><td>gui/commands/help.png</td></tr>
+<tr><td><img src="gui/commands/lookup_help.png"/></td><td>cmd_lookup_help</td><td>TILEG_CMD_LOOKUP_HELP</td><td>gui/commands/lookup_help.png</td></tr>
 <tr><td><img src="gui/commands/chardump.png"/></td><td>cmd_character_dump</td><td>TILEG_CMD_CHARACTER_DUMP</td><td>gui/commands/chardump.png</td></tr>
 <tr><td><img src="gui/commands/inventory.png"/></td><td>cmd_display_inventory</td><td>TILEG_CMD_DISPLAY_INVENTORY</td><td>gui/commands/inventory.png</td></tr>
 <tr><td><img src="gui/commands/cast_spell.png"/></td><td>cmd_cast_spell</td><td>TILEG_CMD_CAST_SPELL</td><td>gui/commands/cast_spell.png</td></tr>
@@ -499,10 +499,9 @@
 <tr><td><img src="gui/invocations/elyvilon_divine_protection.png"/></td><td>ability_elyvilon_divine_protection</td><td>TILEG_ABILITY_ELYVILON_DIVINE_PROTECTION</td><td>gui/invocations/elyvilon_divine_protection.png</td></tr>
 <tr><td><img src="gui/invocations/elyvilon_divine_vigour.png"/></td><td>ability_elyvilon_divine_vigour</td><td>TILEG_ABILITY_ELYVILON_DIVINE_VIGOUR</td><td>gui/invocations/elyvilon_divine_vigour.png</td></tr>
 <tr><td><img src="gui/invocations/elyvilon_greater_healing.png"/></td><td>ability_elyvilon_greater_healing</td><td>TILEG_ABILITY_ELYVILON_GREATER_HEALING</td><td>gui/invocations/elyvilon_greater_healing.png</td></tr>
-<tr><td><img src="gui/invocations/elyvilon_greater_self_healing.png"/></td><td>ability_elyvilon_greater_self_healing</td><td>TILEG_ABILITY_ELYVILON_GREATER_SELF_HEALING</td><td>gui/invocations/elyvilon_greater_self_healing.png</td></tr>
 <tr><td><img src="gui/invocations/elyvilon_lesser_healing.png"/></td><td>ability_elyvilon_lesser_healing</td><td>TILEG_ABILITY_ELYVILON_LESSER_HEALING</td><td>gui/invocations/elyvilon_lesser_healing.png</td></tr>
-<tr><td><img src="gui/invocations/elyvilon_lesser_self_healing.png"/></td><td>ability_elyvilon_lesser_self_healing</td><td>TILEG_ABILITY_ELYVILON_LESSER_SELF_HEALING</td><td>gui/invocations/elyvilon_lesser_self_healing.png</td></tr>
 <tr><td><img src="gui/invocations/elyvilon_purification.png"/></td><td>ability_elyvilon_purification</td><td>TILEG_ABILITY_ELYVILON_PURIFICATION</td><td>gui/invocations/elyvilon_purification.png</td></tr>
+<tr><td><img src="gui/invocations/elyvilon_heal_other.png"/></td><td>ability_elyvilon_heal_other</td><td>TILEG_ABILITY_ELYVILON_HEAL_OTHER</td><td>gui/invocations/elyvilon_heal_other.png</td></tr>
 <tr><td><img src="gui/invocations/fedhas_evolution.png"/></td><td>ability_fedhas_evolution</td><td>TILEG_ABILITY_FEDHAS_EVOLUTION</td><td>gui/invocations/fedhas_evolution.png</td></tr>
 <tr><td><img src="gui/invocations/fedhas_plant_ring.png"/></td><td>ability_fedhas_plant_ring</td><td>TILEG_ABILITY_FEDHAS_PLANT_RING</td><td>gui/invocations/fedhas_plant_ring.png</td></tr>
 <tr><td><img src="gui/invocations/fedhas_rain.png"/></td><td>ability_fedhas_rain</td><td>TILEG_ABILITY_FEDHAS_RAIN</td><td>gui/invocations/fedhas_rain.png</td></tr>
@@ -550,6 +549,8 @@
 <tr><td><img src="gui/invocations/ru_sacrifice_nimbleness.png"/></td><td>ability_ru_sacrifice_nimbleness</td><td>TILEG_ABILITY_RU_SACRIFICE_NIMBLENESS</td><td>gui/invocations/ru_sacrifice_nimbleness.png</td></tr>
 <tr><td><img src="gui/invocations/ru_sacrifice_durability.png"/></td><td>ability_ru_sacrifice_durability</td><td>TILEG_ABILITY_RU_SACRIFICE_DURABILITY</td><td>gui/invocations/ru_sacrifice_durability.png</td></tr>
 <tr><td><img src="gui/invocations/ru_sacrifice_hand.png"/></td><td>ability_ru_sacrifice_hand</td><td>TILEG_ABILITY_RU_SACRIFICE_HAND</td><td>gui/invocations/ru_sacrifice_hand.png</td></tr>
+<tr><td><img src="gui/invocations/ru_sacrifice_experience.png"/></td><td>ability_ru_sacrifice_experience</td><td>TILEG_ABILITY_RU_SACRIFICE_EXPERIENCE</td><td>gui/invocations/ru_sacrifice_experience.png</td></tr>
+<tr><td><img src="gui/invocations/ru_sacrifice_skill.png"/></td><td>ability_ru_sacrifice_skill</td><td>TILEG_ABILITY_RU_SACRIFICE_SKILL</td><td>gui/invocations/ru_sacrifice_skill.png</td></tr>
 <tr><td><img src="gui/invocations/ru_reject_sacrifices.png"/></td><td>ability_ru_reject_sacrifices</td><td>TILEG_ABILITY_RU_REJECT_SACRIFICES</td><td>gui/invocations/ru_reject_sacrifices.png</td></tr>
 <tr><td><img src="gui/invocations/sif_muna_amnesia.png"/></td><td>ability_sif_muna_amnesia</td><td>TILEG_ABILITY_SIF_MUNA_AMNESIA</td><td>gui/invocations/sif_muna_amnesia.png</td></tr>
 <tr><td><img src="gui/invocations/sif_muna_channel.png"/></td><td>ability_sif_muna_channel</td><td>TILEG_ABILITY_SIF_MUNA_CHANNEL</td><td>gui/invocations/sif_muna_channel.png</td></tr>
