--- a/crawl-ref/source/rltiles/tile-player.html
+++ b/crawl-ref/source/rltiles/tile-player.html
@@ -895,8 +895,8 @@
 <tr><td><img src="mon/animals/giant_leech.png"/></td><td>mons_giant_leech</td><td>TILEP_MONS_GIANT_LEECH</td><td>mon/animals/giant_leech.png</td></tr>
 <tr><td><img src="mon/animals/torpor_snail.png"/></td><td>mons_torpor_snail</td><td>TILEP_MONS_TORPOR_SNAIL</td><td>mon/animals/torpor_snail.png</td></tr>
 <tr><td><img src="mon/animals/vampire_mosquito.png"/></td><td>mons_vampire_mosquito</td><td>TILEP_MONS_VAMPIRE_MOSQUITO</td><td>mon/animals/vampire_mosquito.png</td></tr>
-<tr><td><img src="mon/animals/yellow_wasp.png"/></td><td>mons_yellow_wasp</td><td>TILEP_MONS_YELLOW_WASP</td><td>mon/animals/yellow_wasp.png</td></tr>
-<tr><td><img src="mon/animals/red_wasp.png"/></td><td>mons_red_wasp</td><td>TILEP_MONS_RED_WASP</td><td>mon/animals/red_wasp.png</td></tr>
+<tr><td><img src="mon/animals/yellow_wasp.png"/></td><td>mons_wasp</td><td>TILEP_MONS_WASP</td><td>mon/animals/yellow_wasp.png</td></tr>
+<tr><td><img src="mon/animals/red_wasp.png"/></td><td>mons_hornet</td><td>TILEP_MONS_HORNET</td><td>mon/animals/red_wasp.png</td></tr>
 <tr><td><img src="mon/animals/ghost_moth.png"/></td><td>mons_ghost_moth</td><td>TILEP_MONS_GHOST_MOTH</td><td>mon/animals/ghost_moth.png</td></tr>
 <tr><td><img src="mon/animals/moth_of_wrath.png"/></td><td>mons_moth_of_wrath</td><td>TILEP_MONS_MOTH_OF_WRATH</td><td>mon/animals/moth_of_wrath.png</td></tr>
 <tr><td><img src="mon/aquatic/electric_eel.png"/></td><td>mons_electric_eel</td><td>TILEP_MONS_ELECTRIC_EEL</td><td>mon/aquatic/electric_eel.png</td></tr>
@@ -1345,6 +1345,7 @@
 <tr><td><img src="mon/dragons/death_drake.png"/></td><td>mons_death_drake</td><td>TILEP_MONS_DEATH_DRAKE</td><td>mon/dragons/death_drake.png</td></tr>
 <tr><td><img src="mon/dragons/wind_drake.png"/></td><td>mons_wind_drake</td><td>TILEP_MONS_WIND_DRAKE</td><td>mon/dragons/wind_drake.png</td></tr>
 <tr><td><img src="mon/unique/jormungandr.png"/></td><td>mons_jormungandr</td><td>TILEP_MONS_JORMUNGANDR</td><td>mon/unique/jormungandr.png</td></tr>
+<tr><td><img src="mon/unique/giaggostuono.png"/></td><td>mons_giaggostuono</td><td>TILEP_MONS_GIAGGOSTUONO</td><td>mon/unique/giaggostuono.png</td></tr>
 <tr><td><img src="mon/unique/xtahua.png"/></td><td>mons_xtahua</td><td>TILEP_MONS_XTAHUA</td><td>mon/unique/xtahua.png</td></tr>
 <tr><td><img src="mon/unique/serpent_of_hell-geh.png"/></td><td>mons_serpent_of_hell_gehenna</td><td>TILEP_MONS_SERPENT_OF_HELL_GEHENNA</td><td>mon/unique/serpent_of_hell-geh.png</td></tr>
 <tr><td><img src="mon/unique/serpent_of_hell-coc.png"/></td><td>mons_serpent_of_hell_cocytus</td><td>TILEP_MONS_SERPENT_OF_HELL_COCYTUS</td><td>mon/unique/serpent_of_hell-coc.png</td></tr>
